<resources>
    <string name="app_name">TextRoll</string>
    <string name="lblPlay">Play</string>
    <string name="lblStart">Start Game</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblMainMenu">Main Menu</string>
    <string name="lblGo">Go</string>
    <string name="lblFlee">Flee</string>
    <string name="lblFight">Fight</string>
    <string name="lblNoFight">No quest selected!</string>
    <string name="lblLogin">Login</string>
    <string name="lblRegister">Register</string>
    <string name="lblLia">Logged in as:</string>
    <string name="lblLogout">Log Out</string>
    <string name="lblQuit">Quit</string>
    <string name="lblCDN">Choose Display Name</string>
    <string name="lblSelect">Select</string>
    <string name="lblLoadingData">Loading...</string>
    <string name="title_activity_char_select">CharSelectActivity</string>
    <string name="lblBack">Back</string>
    <string name="lblNewCharacter">Create New Character</string>
    <string name="lblSelectExisting">Select existing character:</string>
    <string name="lblSaveChar">Save Character</string>
    <string name="lblEntCharName">Enter character name:</string>
    <string name="lblActiveAbilities">Abilities</string>
    <string name="lblPassiveAbilities">Passives</string>
    <string name="lblAttributes">Attributes</string>
    <string name="lblInventory">Inventory</string>
    <string name="lblStr">Strength</string>
    <string name="lblSpd">Speed</string>
    <string name="lblEnd">Endurance</string>
    <string name="lblInt">Intelligence</string>
    <string name="lblMag">Magic</string>
    <string name="lblName">Name</string>
    <string name="lblAvailablePoints">Available Points</string>
    <string name="lblLoadEncChain">Loading encounters...</string>
    <string name="lblDelete">Delete</string>
    <string name="lblVictory">Victory!</string>
    <string name="lblDefeat">Defeat...</string>
    <string name="lblCP">Character Points</string>
    <string name="lblGold">Gold</string>
    <string name="lblCharMenu">Character Menu</string>
    <string name="lblAvailable">Available</string>
    <string name="lblDesc">Description</string>
    <string name="lblCost">Cost</string>
    <string name="lblPurchase">Purchase</string>
    <string name="lblUpgrade">Upgrade</string>
    <string name="lblSelectQuest">Select Quest</string>
    <string name="lblEquipped">Equipped</string>
    <string name="lblEquip">Equip</string>
    <string name="lblUnequip">Unequip</string>
    <string name="lblBackpack">Backpack</string>
    <string name="lblShop">Shop</string>
    <string name="lblPrice">Price</string>
    <string name="lblBuy">Buy</string>
    <string name="lblSell">Sell</string>
</resources>
