<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.textroll.menus.CharSelectActivity">

    <LinearLayout
        android:id="@+id/linearLayoutCharacters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblSelectExisting"
            android:textAlignment="center"
            tools:text="@string/lblSelectExisting" />

        <Spinner
            android:id="@+id/spinnerCharacterSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/linearLayoutCharSelectOuter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/linearLayoutCharSelectStatsAndInventory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAttributes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblAttributes" />

                <LinearLayout
                    android:id="@+id/linearLayoutCharSelectStr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCharSelectLblStr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lblStr" />

                    <TextView
                        android:id="@+id/textViewCharSelectValStr"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutCharSelectSpd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCharSelectLblSpd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lblSpd" />

                    <TextView
                        android:id="@+id/textViewCharSelectValSpd"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutCharSelectEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCharSelectLblEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lblEnd" />

                    <TextView
                        android:id="@+id/textViewCharSelectValEnd"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutCharSelectInt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCharSelectLblInt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lblInt" />

                    <TextView
                        android:id="@+id/textViewCharSelectValInt"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutCharSelectMag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewCharSelectLblMag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lblMag" />

                    <TextView
                        android:id="@+id/textViewCharSelectValMag"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewInventory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblInventory" />

                <ListView
                    android:id="@+id/listViewCharSelectInventory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCharacterSelectAbilities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCharSelectActives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblActiveAbilities" />

                <ListView
                    android:id="@+id/listViewCharSelectActives"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/textViewCharSelectPassives"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblPassiveAbilities" />

                <ListView
                    android:id="@+id/listViewCharSelectPassives"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonPlayWithSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:onClick="playWithSelected"
            android:text="@string/lblGo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCharacters"
        app:layout_constraintVertical_bias="0.19">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelActivity"
            android:text="@string/lblBack" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonNewCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToChargen"
            android:text="@string/lblNewCharacter" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
